--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -48,6 +48,8 @@ layout: default
     {% include toc.html %}
     {% endunless %}
 
+    {% include important.html content="This site is under active development and is intended to provide all the technical resources you need to successfully develop with the Record Locator API. This project is being developed using an agile methodology, so iterative updates to content will be added on a regular basis." %}
+
   {{content}}
 
     <div class="tags">
